# ESP-Workspace-MCP-Server-for-Hermes

./: .env.example  .gitignore  CHANGELOG.md  FEATURES.md  MANIFEST.in  MEDUIM_ARTICLE.md  PLAN.md  README.md  mcp_server.md  pyproject.toml  requirements.txt  run_server.py  test_esp_integration.py  test_final.py  test_mcp_server.py  test_suite.py  test_suite_v2.py  test_suite_v3.py  verify.py
esp_workspace_mcp/: __init__.py  __main__.py  auth.py  cli.py  config.py  server.py  server_new.py  verify_imports.py
esp_workspace_mcp/categories/: __init__.py  base.py  config.example.toml  filesystem.py  openmv.py
esp_workspace_mcp/resources/: build.py  git_status.py  project.py
esp_workspace_mcp/tools/: __init__.py  diagnostics.py  esp_idf.py  filesystem.py  git_tools.py  phase4_debug.py  phase4_symbols.py  phase4_tools.py  phase4_uart.py  search.py  serial_tools.py  session_tools.py  shell.py
esp_workspace_mcp/transports/: __init__.py
esp_workspace_mcp/utils/: process.py  security.py
