[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-workspace-mcp"
version = "0.1.0"
description = "Full autonomous embedded firmware workspace MCP server for ESP-IDF"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "pyserial>=3.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
